--- a/public/css/customer_details.css
+++ b/public/css/customer_details.css
@@ -376,7 +376,7 @@ body {
   -o-border-radius: 20px;
   font-weight: bolder;
   letter-spacing: .5px;
-  color: grey;
+  color: #5f5f5f;
   text-align: center;
 }
 
@@ -595,7 +595,7 @@ body {
 }
 
 .form-banner-container .overlay .form-wrapper .form-container .form-content div select {
-  color: grey;
+  color: #5f5f5f;
   text-align: center;
 }
 
