--- a/public/sass/index.scss
+++ b/public/sass/index.scss
@@ -293,6 +293,10 @@
                     color: white;
                     width: 100%;
                     padding: 16px;
+                    h1 {
+                        font-size: $font-l;
+                        font-weight: 500;
+                    }
                 }
             }
         }
@@ -308,8 +312,11 @@
     
     .C-split:nth-child(1) {
         position: relative;
-        font-size: $font-xxl;
         text-align: center;
+        h1 {
+            font-size: $font-xxl;
+            font-weight: 500;
+        }
     }
     .C-split:nth-child(1)::first-letter {
         text-transform: uppercase;
@@ -342,6 +349,11 @@
                     justify-content: flex-start;
                     align-items: center;
                     font-size: $font-s;
+
+                    h2 {
+                        font-size: $font-s;
+                        font-weight: 500;
+                    }
 
                     div {
                         position: relative;
@@ -1106,3 +1118,57 @@ footer {
     width: 50px;
     @include trans;
 }
+// VERIFICATION EMAIL ALERT START
+.verification-alert-wrap {
+    position: fixed;
+    top: 50px;
+    left: 0px;
+    width: 100%;
+    padding: 1px;
+    background: rgba(255, 0, 0, 0.596);
+    z-index: 20;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: $font-s;
+    backdrop-filter: blur(10px);
+    cursor: pointer;
+    //display: none;
+    //opacity: 0;
+
+    div {
+        position: relative;
+        margin: 5px;
+    }
+    div:nth-child(1) {
+        width: 25px;
+        height: 25px;
+        background: white;
+        background-image: url("../img/svg/alert-red.svg");
+        background-size: cover;
+        @include background-initializer;
+    }
+    .verify-btn {
+        padding: 5px 15px 5px 15px;
+        border: 2px solid white;
+        @include border-20;
+        @include trans-01s;
+        display: block;
+    }
+    .verify-btn.active {
+        display: none;
+    }
+    .verify-btn:hover {
+        background: rgba(255, 0, 0, 0.715);
+        @include trans-01s;
+    }
+}
+.verification-alert-wrap.color {
+    background: green;
+}
+.verification-alert-wrap.collapse {
+    display: flex;
+    @include trans-01s;
+    opacity: 1;
+}
+// VERIFICATION EMAIL ALERT END
