--- a/public/sass/navigation.scss
+++ b/public/sass/navigation.scss
@@ -64,8 +64,10 @@ body.collapse {
         -o-transition: .2s ease;
     }
     .nav-split:nth-child(3) {
-        font-weight: 600;
-        font-size: 20px;
+        h1 {
+            font-weight: 500;
+            font-size: 20px;
+        }
     }
     .nav-split:nth-child(4) {
         margin-right: 20px;
@@ -138,6 +140,44 @@ body.collapse {
         height: 100%;
         overflow-y: scroll;
         overflow-x: hidden;
+
+        .cart-empty-alert {
+            position: absolute;
+            top: 30%;
+            left: 35%;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+
+            div {
+                position: relative;
+            }
+            div:nth-child(1) {
+                width: 80px;
+                height: 80px;
+                background: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                @include border-circle;
+
+                div {
+                    width: 50px;
+                    height: 50px;
+                    background-image: url("../img/icons/cart-black-btn.png");
+                    @include background-initializer;
+                    background-size: cover;
+                    object-fit: cover;
+                }
+            }
+            div:nth-child(2) {
+                margin-top: $margin-s;
+            }
+        }
+        .cart-empty-alert.collapse {
+            display: flex;
+        }
 
         .cart-single-wrap {
             position: relative;
