--- a/public/css/main-stylesheet.css
+++ b/public/css/main-stylesheet.css
@@ -1242,12 +1242,12 @@ footer .online-status-wrap.slide {
 
 .verification-alert-wrap {
   position: fixed;
-  top: 50px;
+  bottom: 0px;
   left: 0px;
   width: 100%;
   padding: 1px;
   background: rgba(255, 0, 0, 0.596);
-  z-index: 20;
+  z-index: 5;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
