--- a/public/sass/sign-in.scss
+++ b/public/sass/sign-in.scss
@@ -12,10 +12,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-     @include shrink-in;
+    //@include shrink-in;
     @include trans-01s;
-    opacity: 0;
-    visibility: hidden;
+   // opacity: 0;
+   // visibility: hidden;
 
     .signIn-wrapper {
         position: relative;
@@ -225,8 +225,8 @@
                         margin-left: 30px;
                     }
                     .alt-btn {
-                        width: 30px;
-                        height: 30px;
+                        width: 40px;
+                        height: 40px;
                         background: white;
                         @include background-initializer;
                         background-size: cover;
@@ -236,15 +236,6 @@
                     }
                     .goggle-btn {
                         background-image: url("../img/svg/goggle.svg")
-                    }
-                    .facebook-btn {
-                        background-image: url("../img/svg/facebook.svg");
-                    }
-                    .twitter-btn {
-                        background-image: url("../img/svg/twitter.svg");
-                    }
-                    .apple-btn {
-                        background-image: url("../img/svg/apple.svg");
                     }
                 }
                 div:nth-child(6) {
@@ -427,8 +418,8 @@
                         margin: 5px;
                     }
                     .alt-btn {
-                        width: 30px;
-                        height: 30px;
+                        width: 40px;
+                        height: 40px;
                         background: white;
                         @include background-initializer;
                         background-size: cover;
