--- a/public/css/sign-in.css
+++ b/public/css/sign-in.css
@@ -37,11 +37,18 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  transform: scale(0.3);
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  -ms-transform: scale(0.3);
+  -o-transform: scale(0.3);
   transition: .1s ease;
   -webkit-transition: .1s ease;
   -moz-transition: .1s ease;
   -ms-transition: .1s ease;
   -o-transition: .1s ease;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .sign-in-overlay .signIn-wrapper {
