--- a/public/css/userDashboard.css
+++ b/public/css/userDashboard.css
@@ -780,7 +780,7 @@ a {
 }
 
 .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .note.show {
-  color: green;
+  color: #09d309;
 }
 
 .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content label {
