--- a/public/sass/@media_index.scss
+++ b/public/sass/@media_index.scss
@@ -51,6 +51,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -327,6 +333,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -665,6 +677,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -877,6 +895,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -1917,6 +1941,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -3240,6 +3270,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -3646,6 +3682,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -4312,6 +4354,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -4694,6 +4742,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -5114,6 +5168,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
@@ -5535,6 +5595,12 @@
                             width: 90%;
 
                             .content-section {
+                                .content-input {
+                                    padding: 15px 50px;
+                                }
+                                .verify-icon {
+                                    right: 110px;
+                                }
                                 .content-btns {
                                     .btn{
                                         width: 40px;
