--- a/public/sass/userDashboard.scss
+++ b/public/sass/userDashboard.scss
@@ -480,7 +480,7 @@
                             color: rgb(255, 110, 110);
                         }
                         .note.show {
-                            color: green;
+                            color: rgb(9, 211, 9);
                         }
 
                         label {
