--- a/public/css/@media_index.css
+++ b/public/css/@media_index.css
@@ -69,6 +69,12 @@ a {
     position: relative;
     width: 90%;
   }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
+  }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
     height: 40px;
@@ -309,6 +315,12 @@ a {
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content {
     position: relative;
     width: 90%;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
   }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
@@ -645,6 +657,12 @@ a {
     position: relative;
     width: 90%;
   }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
+  }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
     height: 40px;
@@ -818,6 +836,12 @@ a {
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content {
     position: relative;
     width: 90%;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
   }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
@@ -1836,6 +1860,12 @@ a {
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content {
     position: relative;
     width: 90%;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
   }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
@@ -3214,6 +3244,12 @@ a {
     position: relative;
     width: 90%;
   }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
+  }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
     height: 40px;
@@ -3626,6 +3662,12 @@ a {
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content {
     position: relative;
     width: 90%;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
   }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
@@ -4296,6 +4338,12 @@ a {
     position: relative;
     width: 90%;
   }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
+  }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
     height: 40px;
@@ -4691,6 +4739,12 @@ a {
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content {
     position: relative;
     width: 90%;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
   }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
@@ -5134,6 +5188,12 @@ a {
     position: relative;
     width: 90%;
   }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
+  }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
     height: 40px;
@@ -5574,6 +5634,12 @@ a {
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content {
     position: relative;
     width: 90%;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-input {
+    padding: 15px 50px;
+  }
+  .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .verify-icon {
+    right: 110px;
   }
   .user-edited-overlay .user-edited-wrapper .user-update-content .user-edited-content .user-edited-content-container .content .content-section .content-btns .btn {
     width: 40px;
