--- a/public/sass/index.scss
+++ b/public/sass/index.scss
@@ -862,6 +862,23 @@
                     background-size: cover;
                     -webkit-box-reflect: below -5px linear-gradient(transparent, rgba(0, 0, 0, 0.35));
                 }
+                span {
+                    position: absolute;
+                    bottom: 0px;
+                    left: 0px;
+                    padding: 5px 10px 5px 10px;
+                    background: white;
+                    @include border-20;
+                    color: black;
+                    @include shrink-in;
+                    visibility: hidden;
+                    font-size: $font-s;
+                }
+            }
+            .swiper-slide:hover span {
+                @include shrink-out;
+                @include trans-05s;
+                visibility: visible;
             }
         }
     }
