--- a/public/sass/@media_main_stylesheet.scss
+++ b/public/sass/@media_main_stylesheet.scss
@@ -1909,6 +1909,7 @@
     }
     .user-dashboard-wrapper {
         top: 110px;
+        width: 60%;
     }
     // DASHBOARD END
     // SIDE BAR START
@@ -2071,6 +2072,7 @@
     }
     .user-dashboard-wrapper {
         top: 110px;
+        width: 60%;
     }
     // DASHBOARD END
     // SIDE BAR START
@@ -2154,6 +2156,7 @@
     }
     .user-dashboard-wrapper {
         top: 110px;
+        width: 60%;
     }
     // DASHBOARD END
     // SIDE BAR START
@@ -2298,6 +2301,7 @@
     }
     .user-dashboard-wrapper {
         top: 110px;
+        width: 60%;
     }
     // DASHBOARD END
     // SIDE BAR START
