--- a/public/css/@media_main_stylesheet.css
+++ b/public/css/@media_main_stylesheet.css
@@ -1662,6 +1662,7 @@ a {
   }
   .user-dashboard-wrapper {
     top: 110px;
+    width: 60%;
   }
   .sidebar-wrapper {
     position: fixed;
@@ -1809,6 +1810,7 @@ a {
   }
   .user-dashboard-wrapper {
     top: 110px;
+    width: 60%;
   }
   .sidebar-wrapper .sidebar-container .sidebar-content-wrap {
     height: 80vh;
@@ -1884,6 +1886,7 @@ a {
   }
   .user-dashboard-wrapper {
     top: 110px;
+    width: 60%;
   }
   .sidebar-wrapper {
     position: fixed;
@@ -2023,6 +2026,7 @@ a {
   }
   .user-dashboard-wrapper {
     top: 110px;
+    width: 60%;
   }
   .sidebar-wrapper .sidebar-container .sidebar-content-wrap {
     height: 70vh;
