--- a/public/css/customer_details.css
+++ b/public/css/customer_details.css
@@ -130,13 +130,6 @@ body {
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
   overflow: hidden;
-  /*visibility: hidden;
-            opacity: 0;
-            transform: scale(.3);
-            -webkit-transform: scale(.3);
-            -moz-transform: scale(.3);
-            -ms-transform: scale(.3);
-            -o-transform: scale(.3);*/
   transition: 1s ease;
   -webkit-transition: 1s ease;
   -moz-transition: 1s ease;
@@ -1471,19 +1464,66 @@ body {
   margin-left: 10px;
 }
 
-.form-banner-container .overlay .form-wrapper.content-visible {
-  visibility: visible;
-  opacity: 1;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
-  transition: 1s ease;
-  -webkit-transition: 1s ease;
-  -moz-transition: 1s ease;
-  -ms-transition: 1s ease;
-  -o-transition: 1s ease;
+.form-banner-container .overlay .form-wrapper .request-signIn-page {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.85);
+  z-index: 5;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form-banner-container .overlay .form-wrapper .request-signIn-page div .request-message {
+  font-size: 16px;
+  font-weight: 550;
+}
+
+.form-banner-container .overlay .form-wrapper .request-signIn-page div .request-btn {
+  margin-top: 30px;
+}
+
+.form-banner-container .overlay .form-wrapper .request-signIn-page div .request-btn a {
+  padding: 10px;
+  background: black;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form-banner-container .overlay .form-wrapper .request-signIn-page div .request-btn a .i {
+  width: 30px;
+  height: 30px;
+  background-image: url("/public/img/icons/arrow-white-down.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-right: 10px;
+  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+}
+
+.form-banner-container .overlay .form-wrapper .request-signIn-page.show {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .form-banner-container .overlay .online-status-wrap {
