--- a/public/sass/customer_details.scss
+++ b/public/sass/customer_details.scss
@@ -84,13 +84,6 @@ body {
             backdrop-filter: blur(10px);
             @include border-20;
             overflow: hidden;
-            /*visibility: hidden;
-            opacity: 0;
-            transform: scale(.3);
-            -webkit-transform: scale(.3);
-            -moz-transform: scale(.3);
-            -ms-transform: scale(.3);
-            -o-transform: scale(.3);*/
             @include trans-1s;
             
             .form-container {
@@ -1001,16 +994,50 @@ body {
                     }
                 }
             }
-        }
-        .form-wrapper.content-visible {
-            visibility: visible;
-            opacity: 1;
-            transform: scale(1);
-            -webkit-transform: scale(1);
-            -moz-transform: scale(1);
-            -ms-transform: scale(1);
-            -o-transform: scale(1);
-            @include trans-1s;
+            .request-signIn-page {
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.85);
+                z-index: 5;
+                display: none;
+                justify-content: center;
+                align-items: center;
+
+                div {
+                    .request-message {
+                        font-size: $font-l;
+                        font-weight: 550;
+                    }
+                    .request-btn {
+                        margin-top: $margin-l;
+
+                        a {
+                            padding: 10px;
+                            background: black;
+                            color: white;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            .i {
+                                width: 30px;
+                                height: 30px;
+                                background-image: url("/public/img/icons/arrow-white-down.png");
+                                @include background-initializer;
+                                background-size: cover;
+                                margin-right: 10px;
+                                @include rotate(90deg)
+                            }
+                        }
+                    }
+                }
+            }
+            .request-signIn-page.show {
+                display: flex;
+            }
         }
         .online-status-wrap {
             position: fixed;
